--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <div class="contact-info">
               <p class="contact-title">Languages</p>
 
-              <p class="english"> english </p>
+              <Languages>English, Hindi, Telugu, Tamil</Languages>
             </div>
 
           </li>
