--- a/index.html
+++ b/index.html
@@ -128,14 +128,14 @@
         <ul class="social-list">
 
           <li class="social-item">
-            <a href="#" class="social-link">
-              <ion-icon name="logo-facebook"></ion-icon>
+            <a href="https://twitter.com/Basanitweets" class="social-link">
+              <ion-icon name="logo-twitter"></ion-icon>
             </a>
           </li>
 
           <li class="social-item">
-            <a href="#" class="social-link">
-              <ion-icon name="logo-twitter"></ion-icon>
+            <a href="https://www.linkedin.com/in/sivabasani/" class="social-link">
+              <ion-icon name="logo-linkedin"></ion-icon>
             </a>
           </li>
 
@@ -209,11 +209,11 @@
 
         <section class="about-text">
           <p>
-            I'm siva basani , this is just check text : insert your about me here
+            I am a Master’s in Business Analytics student at Goizueta Business School, with a fervent passion that lies at the intersection of data, analytics, and business. I’m committed to solving problems and turning data into actionable insights for improved decision-making. My interests include data analytics and visualizations, machine learning, artificial intelligence, and strategic business development. Through critical thinking and a data-driven approach, I seek to address complex challenges effectively.
           </p>
 
           <p>
-            My job is to build your, this is the second para text add your text here
+            Beyond the analytics and algorithms, I Excel in making connections :), I work out and also dance for my fitness. In my free time, I enjoy cricket, I play the guitar and watch movies. These activities offer me a balance and a different perspective outside of work. 
             
           </p>
         </section>
