--- a/index.html
+++ b/index.html
@@ -128,13 +128,13 @@
         <ul class="social-list">
 
           <li class="social-item">
-            <a href="https://twitter.com/Basanitweets" class="social-link">
+            <a href="https://twitter.com/Basanitweets" class="social-link" target ="_blank">
               <ion-icon name="logo-twitter"></ion-icon>
             </a>
           </li>
 
           <li class="social-item">
-            <a href="https://www.linkedin.com/in/sivabasani/" class="social-link">
+            <a href="https://www.linkedin.com/in/sivabasani/" class="social-link" target ="_blank">
               <ion-icon name="logo-linkedin"></ion-icon>
             </a>
           </li>
