--- a/index.html
+++ b/index.html
@@ -237,10 +237,10 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Web design</h4>
+                <h4 class="h4 service-item-title">Data Analytics</h4>
 
                 <p class="service-item-text">
-                  The most modern and high-quality design made at a professional level.
+                  Navigating through numbers to unveil stories that transform data into impactful business decisions
                 </p>
               </div>
 
@@ -253,10 +253,10 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Web development</h4>
+                <h4 class="h4 service-item-title">Machine Learning</h4>
 
                 <p class="service-item-text">
-                  High-quality development of sites at the professional level.
+                  Crafting intelligent systems that think like us to make smarter business choices
                 </p>
               </div>
 
@@ -269,10 +269,10 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Mobile apps</h4>
+                <h4 class="h4 service-item-title">Business Intelligence</h4>
 
                 <p class="service-item-text">
-                  Professional development of applications for iOS and Android.
+                  Turning data patterns into visual stories that shape business futures
                 </p>
               </div>
 
@@ -285,10 +285,10 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Photography</h4>
+                <h4 class="h4 service-item-title">Consulting</h4>
 
                 <p class="service-item-text">
-                  I make high-quality photos of any category at a professional level.
+                  Using structured problem solving to turn complexity into clarity and opportunity
                 </p>
               </div>
 
