--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                 <h4 class="h4 service-item-title">Data Analytics</h4>
 
                 <p class="service-item-text">
-                  Navigating through numbers to unveil stories that transform data into impactful business decisions
+                  Crafting narratives by decoding data for impactful business decisions
                 </p>
               </div>
 
@@ -288,7 +288,7 @@
                 <h4 class="h4 service-item-title">Consulting</h4>
 
                 <p class="service-item-text">
-                  Using structured problem solving to turn complexity into clarity and opportunity
+                  Leveraging problem solving to transform complexity into clarity and opportunity
                 </p>
               </div>
 
