--- a/index.html
+++ b/index.html
@@ -1141,22 +1141,20 @@
         <section class="mapbox" data-mapbox>
           <figure>
             <iframe
-              src="https://www.google.com/maps/place/Decatur,+GA+30030/data=!4m2!3m1!1s0x88f5073c14fe20e9:0x3152e0dc7cd17800?sa=X&ved=2ahUKEwi02dC68ZyEAxVinGoFHbffDlQQ8gF6BAgQEAA"
+              src="https://www.google.com/maps/d/embed?mid=1SbPpF7EESyhvl9z1XvxNtVIP2EezMXw&ehbc=2E312F"
               width="400" height="300" loading="lazy"></iframe>
           </figure>
         </section>
         
         <section class="about-text">
         <p> 
+
+          
       I'm always excited to connect! Drop me a line at bsivapr@emory.edu or slide into my DMs on social media (you'll find the links around here). Looking forward to engaging in thoughtful conversations and exploring exciting opportunities together!
         </p>
-
         </section>
-
       </article>
-
     </div>
-
   </main>
 
 
