--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                 <h4 class="h4 service-item-title">Machine Learning</h4>
 
                 <p class="service-item-text">
-                  Crafting intelligent systems that think like us to make smarter business choices
+                  Creating intelligent systems that think like us to make smarter business choices
                 </p>
               </div>
 
