--- a/index.html
+++ b/index.html
@@ -1150,7 +1150,7 @@
         <p> 
 
           
-      I'm always excited to connect! Drop me a line at bsivapr@emory.edu or slide into my DMs on social media (you'll find the links around here). Looking forward to engaging in thoughtful conversations and exploring exciting opportunities together!
+      I'm always excited to connect! Drop me a line at (bsivapr@emory.edu) or slide into my DMs on social media (you'll find the links around here). Looking forward to engaging in thoughtful conversations and exploring exciting opportunities together!
         </p>
         </section>
       </article>
