--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-dev.svg" alt="Web development icon" width="40">
+                <img src="./assets/images/ml-icon.svg" alt="ML Icon" width="40">
               </div>
 
               <div class="service-content-box">
