--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-design.svg
+                <img src="./assets/images/data-analysis-icon.svg
                 " alt="design icon" width="40">
               </div>
 
@@ -249,7 +249,7 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/ml-icon.svg" alt="ML Icon" width="40">
+                <img src="./assets/images/ml-final-icon.svg" alt="ML Icon" width="40">
               </div>
 
               <div class="service-content-box">
@@ -265,7 +265,7 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-app.svg" alt="mobile app icon" width="40">
+                <img src="./assets/images/business-intelligence.svg" alt="business intelligence" width="40">
               </div>
 
               <div class="service-content-box">
@@ -281,7 +281,7 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-photo.svg" alt="camera icon" width="40">
+                <img src="./assets/images/consulting icon.svg" alt="consulting icon" width="40">
               </div>
 
               <div class="service-content-box">
