--- a/index.html
+++ b/index.html
@@ -128,23 +128,23 @@
         <ul class="social-list">
 
           <li class="social-item">
-            <a href="https://twitter.com/Basanitweets" class="social-link" target ="_blank">
-              <ion-icon name="logo-twitter"></ion-icon>
-            </a>
-          </li>
-
-          <li class="social-item">
             <a href="https://www.linkedin.com/in/sivabasani/" class="social-link" target ="_blank">
               <ion-icon name="logo-linkedin"></ion-icon>
             </a>
           </li>
 
           <li class="social-item">
-            <a href="#" class="social-link">
-              <ion-icon name="logo-instagram"></ion-icon>
+            <a href="https://medium.com/@basani.sivaprasad" class="social-link" target = "_blank">
+              <ion-icon name="logo Medium"></ion-icon>
             </a>
           </li>
 
+            <li class="social-item">
+            <a href="https://twitter.com/Basanitweets" class="social-link" target ="_blank">
+              <ion-icon name="logo-twitter"></ion-icon>
+            </a>
+          </li>
+          
         </ul>
 
       </div>
