--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
           <li class="social-item">
             <a href="https://medium.com/@basani.sivaprasad" class="social-link" target = "_blank">
-              <ion-icon name="logo Medium"></ion-icon>
+              <ion-icon name="logo-medium"></ion-icon>
             </a>
           </li>
 
