--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
           <ul class="clients-list has-scrollbar">
 
             <li class="clients-item">
-              <a href="https://www.att.com/">
+              <a href="https://www.att.com/" target = "_blank">
                 <img src="./assets/images/att-logocheck.png" alt="client logo">
               </a>
             </li>
