--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
 
             <li class="clients-item">
               <a href="https://www.att.com/" target = "_blank">
-                <img src="./assets/images/att-logocheck.png" alt="client logo">
+                <img src="./assets/images/att-logocheck.png" alt="client logo" width="129" height="81">
               </a>
             </li>
 
