--- a/index.html
+++ b/index.html
@@ -717,15 +717,15 @@
             </li>
 
             <li class="filter-item">
-              <button data-filter-btn>Web design</button>
+              <button data-filter-btn>Scripts</button>
             </li>
 
             <li class="filter-item">
-              <button data-filter-btn>Applications</button>
+              <button data-filter-btn>Code</button>
             </li>
 
             <li class="filter-item">
-              <button data-filter-btn>Web development</button>
+              <button data-filter-btn>Visualisations</button>
             </li>
 
           </ul>
@@ -749,15 +749,15 @@
               </li>
 
               <li class="select-item">
-                <button data-select-item>Web design</button>
+                <button data-select-item>Scripts</button>
               </li>
 
               <li class="select-item">
-                <button data-select-item>Applications</button>
+                <button data-select-item>Code</button>
               </li>
 
               <li class="select-item">
-                <button data-select-item>Web development</button>
+                <button data-select-item>Visualisations</button>
               </li>
 
             </ul>
@@ -766,74 +766,73 @@
 
           <ul class="project-list">
 
-            <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#">
+            <li class="project-item  active" data-filter-item data-category="Visualisations">
+              <a href="https://public.tableau.com/views/PremierLeagueanalytics/Dashboard1?:language=en-US&:sid=&:display_count=n&:origin=viz_share_link" target = "_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-1.jpg" alt="finance" loading="lazy">
+                  <img src="./assets/images/football tableau.jpg" alt="Premier League" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Finance</h3>
+                <h3 class="project-title">Premier League</h3>
 
-                <p class="project-category">Web development</p>
+                <p class="project-category">Visualisations</p>
 
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#">
+              <li class="project-item  active" data-filter-item data-category="Visualisations">
+              <a href="https://public.tableau.com/views/TableauNobel/Dashboard1?:language=en-US&:sid=&:display_count=n&:origin=viz_share_link" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-2.png" alt="orizon" loading="lazy">
+                  <img src="./assets/images/nobel tableau.jpg" alt="Nobel Analytics" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Orizon</h3>
+                <h3 class="project-title">Nobel Analytics</h3>
 
-                <p class="project-category">Web development</p>
+                <p class="project-category">Visualisations</p>
 
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="web design">
-              <a href="#">
+            
+            <li class="project-item  active" data-filter-item data-category="Visualisations">
+              <a href="https://public.tableau.com/views/pizzasales_17075383824610/Dashboard1?:language=en-US&:sid=&:display_count=n&:origin=viz_share_link" target = "_blank" >
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-3.jpg" alt="fundo" loading="lazy">
+                  <img src="./assets/images/tableau pizza.jpg" alt="Pizza Sales" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Fundo</h3>
+                <h3 class="project-title">Pizza Sales</h3>
 
-                <p class="project-category">Web design</p>
+                <p class="project-category">Visualisations</p>
 
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="applications">
-              <a href="#">
+            <li class="project-item  active" data-filter-item data-category="Scripts">
+              <a href="https://www.canva.com/design/DAF7fqVRZKI/AI-ebDJNCDwbk0jKGBdL7w/edit?utm_content=DAF7fqVRZKI&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target = "_blank" >
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-4.png" alt="brawlhalla" loading="lazy">
+                  <img src="./assets/images/canva pizza.jpg" alt="Pizza Store" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Brawlhalla</h3>
-
-                <p class="project-category">Applications</p>
+                <h3 class="project-title">Pizza Store</h3>
 
               </a>
             </li>
