--- a/index.html
+++ b/index.html
@@ -458,38 +458,38 @@
           <ul class="clients-list has-scrollbar">
 
             <li class="clients-item">
-              <a href="https://www.att.com/" target = "_blank">
+              <a href="#" >
                 <img src="./assets/images/att-logocheck.png" alt="client logo" width="129" height="81">
               </a>
             </li>
 
             <li class="clients-item">
-              <a href="#">
-                <img src="./assets/images/logo-2-color.png" alt="client logo">
+              <a href="#" >
+                <img src="./assets/images/Emory logo.png" alt="client logo" width="129" height="81" >
               </a>
             </li>
 
             <li class="clients-item">
               <a href="#">
-                <img src="./assets/images/logo-3-color.png" alt="client logo">
+                <img src="./assets/images/chimera logo.png" alt="client logo">
               </a>
             </li>
 
             <li class="clients-item">
               <a href="#">
-                <img src="./assets/images/logo-4-color.png" alt="client logo">
+                <img src="./assets/images/finlatics logo.png" alt="client logo">
               </a>
             </li>
 
             <li class="clients-item">
               <a href="#">
-                <img src="./assets/images/logo-5-color.png" alt="client logo">
+                <img src="./assets/images/heritage logo.jpg" alt="client logo">
               </a>
             </li>
 
             <li class="clients-item">
               <a href="#">
-                <img src="./assets/images/logo-6-color.png" alt="client logo">
+                <img src="./assets/images/evidyaloka logo.png" alt="client logo">
               </a>
             </li>
 
@@ -715,7 +715,8 @@
             <li class="filter-item">
               <button class="active" data-filter-btn>All</button>
             </li>
-
+            
+<!--
             <li class="filter-item">
               <button data-filter-btn>Scripts</button>
             </li>
@@ -727,7 +728,8 @@
             <li class="filter-item">
               <button data-filter-btn>Visualisations</button>
             </li>
-
+-->
+            
           </ul>
 
           <div class="filter-select-box">
