--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
 
             <li class="clients-item">
               <a href="#" >
-                <img src="./assets/images/Emory logo.png" alt="client logo" width="129" height="81" >
+                <img src="./assets/images/Emory updt logo.png" alt="client logo" width="129" height="81" >
               </a>
             </li>
 
