--- a/index.html
+++ b/index.html
@@ -298,108 +298,6 @@
 
         </section>
 
-                <!--
-          - testimonials
-        -->
-
-        <section class="testimonials">
-
-          <h3 class="h3 testimonials-title">Testimonials</h3>
-
-          <ul class="testimonials-list has-scrollbar">
-
-            <li class="testimonials-item">
-              <div class="content-card" data-testimonials-item>
-
-                <figure class="testimonials-avatar-box">
-                  <img src="./assets/images/avatar-1.jpg" alt="test image" width="60" data-testimonials-avatar>
-                </figure>
-
-                <h4 class="h4 testimonials-item-title" data-testimonials-title>Daniel lewis</h4>
-
-                <div class="testimonials-text" data-testimonials-text>
-                  <p>
-                    Richard was hired to create a corporate identity. We were very pleased with the work done. She has a
-                    lot of experience
-                    and is very concerned about the needs of client. Lorem ipsum dolor sit amet, ullamcous cididt
-                    consectetur adipiscing
-                    elit, seds do et eiusmod tempor incididunt ut laborels dolore magnarels alia.
-                  </p>
-                </div>
-
-              </div>
-            </li>
-
-            <li class="testimonials-item">
-              <div class="content-card" data-testimonials-item>
-
-                <figure class="testimonials-avatar-box">
-                  <img src="./assets/images/avatar-2.png" alt="Jessica miller" width="60" data-testimonials-avatar>
-                </figure>
-
-                <h4 class="h4 testimonials-item-title" data-testimonials-title>Jessica miller</h4>
-
-                <div class="testimonials-text" data-testimonials-text>
-                  <p>
-                    Richard was hired to create a corporate identity. We were very pleased with the work done. She has a
-                    lot of experience
-                    and is very concerned about the needs of client. Lorem ipsum dolor sit amet, ullamcous cididt
-                    consectetur adipiscing
-                    elit, seds do et eiusmod tempor incididunt ut laborels dolore magnarels alia.
-                  </p>
-                </div>
-
-              </div>
-            </li>
-
-            <li class="testimonials-item">
-              <div class="content-card" data-testimonials-item>
-
-                <figure class="testimonials-avatar-box">
-                  <img src="./assets/images/avatar-3.png" alt="Emily evans" width="60" data-testimonials-avatar>
-                </figure>
-
-                <h4 class="h4 testimonials-item-title" data-testimonials-title>Emily evans</h4>
-
-                <div class="testimonials-text" data-testimonials-text>
-                  <p>
-                    Richard was hired to create a corporate identity. We were very pleased with the work done. She has a
-                    lot of experience
-                    and is very concerned about the needs of client. Lorem ipsum dolor sit amet, ullamcous cididt
-                    consectetur adipiscing
-                    elit, seds do et eiusmod tempor incididunt ut laborels dolore magnarels alia.
-                  </p>
-                </div>
-
-              </div>
-            </li>
-
-            <li class="testimonials-item">
-              <div class="content-card" data-testimonials-item>
-
-                <figure class="testimonials-avatar-box">
-                  <img src="./assets/images/avatar-4.png" alt="Henry william" width="60" data-testimonials-avatar>
-                </figure>
-
-                <h4 class="h4 testimonials-item-title" data-testimonials-title>Henry william</h4>
-
-                <div class="testimonials-text" data-testimonials-text>
-                  <p>
-                    Richard was hired to create a corporate identity. We were very pleased with the work done. She has a
-                    lot of experience
-                    and is very concerned about the needs of client. Lorem ipsum dolor sit amet, ullamcous cididt
-                    consectetur adipiscing
-                    elit, seds do et eiusmod tempor incididunt ut laborels dolore magnarels alia.
-                  </p>
-                </div>
-
-              </div>
-            </li>
-
-          </ul>
-
-        </section>
-
 
         <!--
           - testimonials modal
@@ -525,26 +423,25 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Goizueta Business School</h4>
+              <h4 class="h4 timeline-item-title">Emory University - Goizueta Business School</h4>
 
-              <span>Masters in Business Analytics</span>
+              <span>Master's in Business Analytics</span>
 
               <p class="timeline-text">
-                Coursework: Business Analytics, Data Visualization, Decision Analytics & Optimization, Machine Learning, 
-                Artificial Intelligence, Financial Data Analytics, prescriptive Analytics, Quantitative Strategies.
+                Coursework: Business Analytics, Data Visualization, Decision Analytics & Optimization, Machine Learning, Artificial Intelligence, Financial Data Analytics, prescriptive Analytics, Quantitative Strategies.
               </p>
 
             </li>
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Indian Institute of Management(IIM), Indore</h4>
+              <h4 class="h4 timeline-item-title">Indian Institute Of Management, Indore</h4>
 
-              <span>Bachelors in Business Management</span>
+              <span>Bachelor's in Business Management</span>
 
               <p class="timeline-text">
-                Double Major in Business & Economics, Summa Cum laude
-                Societies: IAG (Investment Analysis Group), Appl-I (Consulting Club), I-Help.
+                Double Major in Business & Economics, Summa Cum laude <br>
+                Societies: IAG (Investment Analysis Group), Appl-I (Consulting Club), I-Help. <br>
                 Projects: Jio vs Airtel in Telecom Battle (Game Theory), ONGC: Research on anti-trust practice in the Indian oil
                 & gas sector (Competition Policy), SQL and Normalization (DBMS).
               </p>
@@ -574,8 +471,8 @@
               <span>January 2024 - Present</span>
 
               <p class="timeline-text">
-                1.Led a strategic initiative for AT&T focused on enhancing cross-selling efforts across multiple product lines, employing advanced data analytics to identify synergies and cross-sell opportunities among existing customer bases.
-                2.Utilized Machine learning, predictive analytics, and customer segmentation techniques to develop targeted cross-selling strategies.
+                1.Led a strategic initiative for AT&T focused on enhancing cross-selling efforts across multiple product lines, employing advanced data analytics to identify synergies and cross-sell opportunities among existing customer bases.<br>
+                2.Utilized Machine learning, predictive analytics, and customer segmentation techniques to develop targeted cross-selling strategies.<br>
                 3.Designed and executed a comprehensive data analysis framework using Python and SQL, enabling the extraction of insights from large datasets to inform effective cross-sell approaches and marketing campaigns.
 
               </p>
