--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
               <span>Master's in Business Analytics</span>
 
               <p class="timeline-text">
-                Coursework: Business Analytics, Data Visualization, Decision Analytics & Optimization, Machine Learning, Artificial Intelligence, Financial Data Analytics, prescriptive Analytics, Quantitative Strategies.
+                Coursework: Business Analytics, Data Visualization, Decision Analytics & Optimization<br> Machine Learning, Artificial Intelligence, Financial Data Analytics, prescriptive Analytics<br> Quantitative Strategies.
               </p>
 
             </li>
@@ -466,14 +466,14 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">AT&T - Analytics Consultant</h4>
+              <h4 class="h4 timeline-item-title">Analytics Consultant, AT&T</h4>
 
               <span>January 2024 - Present</span>
 
               <p class="timeline-text">
-                1.Led a strategic initiative for AT&T focused on enhancing cross-selling efforts across multiple product lines, employing advanced data analytics to identify synergies and cross-sell opportunities among existing customer bases.<br>
-                2.Utilized Machine learning, predictive analytics, and customer segmentation techniques to develop targeted cross-selling strategies.<br>
-                3.Designed and executed a comprehensive data analysis framework using Python and SQL, enabling the extraction of insights from large datasets to inform effective cross-sell approaches and marketing campaigns.
+                1. Led a strategic initiative for AT&T focused on enhancing cross-selling efforts across multiple product lines, employing advanced data analytics to identify synergies and cross-sell opportunities among existing customer bases.<br>
+                2. Utilized Machine learning, predictive analytics, and customer segmentation techniques to develop targeted cross-selling strategies.<br>
+                3. Designed and executed a comprehensive data analysis framework using Python and SQL, enabling the extraction of insights from large datasets to inform effective cross-sell approaches and marketing campaigns.
 
               </p>
 
@@ -481,14 +481,14 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Emory University - Research Assistant</h4>
+              <h4 class="h4 timeline-item-title">Research Assistant, Emory University</h4>
 
               <span>August 2023 - Present</span>
 
               <p class="timeline-text">
-                1.Assisted Dr. Ram Chellappa in research on constructing optimal analytics teams for businesses and led a web scraping initiative capturing over 12,000 job listings via Python and BeautifulSoup.
-                2.Conducted literature reviews and data analysis to support findings on analytics team composition, employing statistical software and Python for insights and data manipulation.
-                3.Engaged as a Teaching Assistant for Processes and Systems Management course in Dr. Chellappa’s MBA class and managed the grading and feedback process for assignments and exams.
+                1. Assisted Dr. Ram Chellappa in research on constructing optimal analytics teams for businesses and led a web scraping initiative capturing over 12,000 job listings via Python and BeautifulSoup.<br>
+                2. Conducted literature reviews and data analysis to support findings on analytics team composition, employing statistical software and Python for insights and data manipulation.<br>
+                3. Engaged as a Teaching Assistant for Processes and Systems Management course in Dr. Chellappa’s MBA class and managed the grading and feedback process for assignments and exams.
 
               </p>
 
@@ -496,14 +496,14 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Chimera Biotech - Business Analyst</h4>
+              <h4 class="h4 timeline-item-title">Business Analyst, Chimera Biotech </h4>
 
               <span>March 2022 - April 2023</span>
 
               <p class="timeline-text">
-                1.Conducted market research on Indian medical retail, aiding in the successful launch of new DNA & RNA kits across an expansive network of over 10,000+ retail outlets.
-                2.Performed competitive pricing analysis and established benchmarks, resulting in a 4% increase in profit margin.
-                3.Leveraged Excel, Python and MySQL to reduce the overall investment in the products by ~15% saving $150,000+
+                1. Conducted market research on Indian medical retail, aiding in the successful launch of new DNA & RNA kits across an expansive network of over 10,000+ retail outlets.<br>
+                2. Performed competitive pricing analysis and established benchmarks, resulting in a 4% increase in profit margin.<br>
+                3. Leveraged Excel, Python and MySQL to reduce the overall investment in the products by ~15% saving $150,000+
 
               </p>
 
@@ -512,42 +512,42 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">NDA Securities - Analyst</h4>
+              <h4 class="h4 timeline-item-title">Investment Analyst, NDA Securities</h4>
 
               <span>December 2021 - February 2022</span>
 
               <p class="timeline-text">
-                1.Conducted quantitative research on $8M portfolio, performed asset reallocation improving performance over 5%. 
-                2.Delivered insightful analytics that influenced C-level strategic choices, leading to an increase of over 10% ROI for a $3M investment portfolio. 
-                3.Authored in-depth stock analysis reports on 20+ companies in the Banking and Automobile sectors, influencing investment strategies with Buy/Sell ratings that yielded a 5% higher return than the market average.
+                1. Conducted quantitative research on $8M portfolio, performed asset reallocation improving performance over 5%.<br>
+                2. Delivered insightful analytics that influenced C-level strategic choices, leading to an increase of over 10% ROI for a $3M investment portfolio.<br>
+                3. Authored in-depth stock analysis reports on 20+ companies in the Banking and Automobile sectors, influencing investment strategies with Buy/Sell ratings that yielded a 5% higher return than the market average.
               </p>
 
             </li>
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Finlatics - Analyst </h4>
+              <h4 class="h4 timeline-item-title">Financial Analyst,Finlatics</h4>
 
               <span>September 2021 - November 2021</span>
 
               <p class="timeline-text">
-                1.Designed and managed a real-time simulated portfolio of BSE 500 listed companies, conducting performance assessments by directly correlating with the BSE 500 Index benchmarks.
-                2.Implemented PESTLE and PORTERS 5 Forces analysis to draft market recommendations in FMCG and IT sectors.
-                3.Integrated the CAPM Model into the company’s intraday stock software to create a sustainable trading strategy.
+                1. Designed and managed a real-time simulated portfolio of BSE 500 listed companies, conducting performance assessments by directly correlating with the BSE 500 Index benchmarks.<br>
+                2. Implemented PESTLE and PORTERS 5 Forces analysis to draft market recommendations in FMCG and IT sectors.<br>
+                3. Integrated the CAPM Model into the company’s intraday stock software to create a sustainable trading strategy.
               </p>
 
             </li>
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Aashman - Marketing Analyst</h4>
+              <h4 class="h4 timeline-item-title">Marketing Analyst, Aashman</h4>
 
               <span>June 2021 - August 2021</span>
 
               <p class="timeline-text">
-                1.Elevated Aashman Foundation's social media presence by managing social media platforms, resulting in a 30% increase in followers and a 50% boost in content reach.
-                2.Conducted comprehensive content audits across all social media channels, implementing strategic enhancements that led to a 20% improvement in audience interaction and content visibility.
-                3.Spearheaded innovative branding initiatives and campaigns for Aashman Foundation, contributing to a 40% growth in brand awareness and a 35% increase in online community size.
+                1. Elevated Aashman Foundation's social media presence by managing social media platforms, resulting in a 30% increase in followers and a 50% boost in content reach.<br>
+                2. Conducted comprehensive content audits across all social media channels, implementing strategic enhancements that led to a 20% improvement in audience interaction and content visibility.<br>
+                3. Spearheaded innovative branding initiatives and campaigns for Aashman Foundation, contributing to a 40% growth in brand awareness and a 35% increase in online community size.
               </p>
 
             </li>
