--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Financial Analyst,Finlatics</h4>
+              <h4 class="h4 timeline-item-title">Financial Analyst, Finlatics</h4>
 
               <span>September 2021 - November 2021</span>
 
@@ -546,7 +546,7 @@
 
               <p class="timeline-text">
                 1. Elevated Aashman Foundation's social media presence by managing social media platforms, resulting in a 30% increase in followers and a 50% boost in content reach.<br>
-                2. Conducted comprehensive content audits across all social media channels, implementing strategic enhancements that led to a 20% improvement in audience interaction and content visibility.<br>
+                2. Conducted comprehensive content audits across all social media channels, implementing strategic enhancements that led to a 20% improvement in visibility and audience interaction.<br>
                 3. Spearheaded innovative branding initiatives and campaigns for Aashman Foundation, contributing to a 40% growth in brand awareness and a 35% increase in online community size.
               </p>
 
