--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 
         <section class="about-text">
           <p>
-            I am a Master’s in Business Analytics student at Goizueta Business School, with a fervent passion that lies at the intersection of data, analytics, and business. I’m committed to solving problems and turning data into actionable insights for improved decision-making. My interests include data analytics and visualizations, machine learning, artificial intelligence, and strategic business development. Through critical thinking and a data-driven approach, I seek to address complex challenges effectively.
+            I am a Master’s in Business Analytics student at Goizueta Business School, with passion that lies at the intersection of data, analytics, and business. I’m committed to solving problems and turning data into actionable insights for improved decision-making. My interests include data analytics and visualizations, machine learning, artificial intelligence, and strategic business development. Through critical thinking and a data-driven approach, I seek to address complex challenges effectively.
           </p>
 
           <p>
